--- a/templates/registration/success.html.twig
+++ b/templates/registration/success.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends '../base.html.twig' %}
 
 {% block title %}Hello RegisterController!{% endblock %}
 
@@ -9,8 +9,8 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello newcomer! ✅</h1>
+    <h1>Successful registration! ✅</h1>
 
-    {{ form(form) }}
+    Welcome {{ user.name }}!
 </div>
 {% endblock %}
