--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,6 +1,46 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}User{% endblock %}
+
 {% block body %}
-    <h1>Hello {{ user.name }}!</h1>
-    <p>Your email is: {{ user.email }}</p>
+    <h1>User</h1>
+
+    <table class="table">
+        <tbody>
+        <tr>
+            <th>User_id</th>
+            <td>{{ user.vendorId }}</td>
+        </tr>
+        <tr>
+            <th>Email</th>
+            <td>{{ user.email }}</td>
+        </tr>
+        <tr>
+            <th>Is_verified</th>
+            <td>{{ user.isVerified }}</td>
+        </tr>
+        <tr>
+            <th>Name</th>
+            <td>{{ user.name }}</td>
+        </tr>
+        <tr>
+            <th>Created_at</th>
+            <td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+        </tr>
+        <tr>
+            <th>Updated_at</th>
+            <td>{{ user.updatedAt ? user.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+        </tr>
+        <tr>
+            <th>Deleted_at</th>
+            <td>{{ user.deletedAt ? user.deletedAt|date('Y-m-d H:i:s') : '' }}</td>
+        </tr>
+        </tbody>
+    </table>
+
+    <a href="{{ path('user_index') }}">back to list</a>
+
+    <a href="{{ path('user_edit', {'user': user.userId}) }}">edit</a>
+
+    {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
